// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "dac2880c182f2a1528f9fcf0a832de4c",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "dcc28934450fd91de9ee2e32f3a15a9a",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "bffa0348896d909a0d17fb8fdbaa3bcd",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "39ab1114c28090a61832edb35ed77ecd",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "a46727b33f23dd821c252485d04ff54d",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "3ab7429ba39f8903e307cfbfc6f78dc7",
  "main.fa12b930c7499eb3acf2.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.fa12b930c7499eb3acf2.js": "e99cbc712f27bc24f7f8dc1e3a026ab8",
  "main.fa12b930c7499eb3acf2.js.map": "bca49995f958cee554606217244fcb50",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "2.092afbaa57d1218da8fb.css": "16e4925d2f0de443907834b33b46394b",
  "2.092afbaa57d1218da8fb.js": "c92409261cb8480ae804bdbaf6ada2d6",
  "2.092afbaa57d1218da8fb.js.map": "2a05f3569e6aea08ffaad89852ad5f8c",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "3.724e9291ed4ab29de160.js": "1bb44ae70046b0a9a0c9dc7ef126f8c8",
  "3.724e9291ed4ab29de160.js.map": "359ee838fcc6d62b2eba8f162c7fbaea",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "6c25a7f0a1960d30c0c0aa1fb6d91eb9",
  "main.ce97d6f39fc2fdc77993.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.ce97d6f39fc2fdc77993.js": "c20068b090eed6f7fe00eb0a0a2ca4a2",
  "main.ce97d6f39fc2fdc77993.js.map": "72c863c4dbd00f61b14f08e9b71a0b6a",
  "manifest.2962a6b0d339e9338b92.js": "e6ce3a9ed6fd133636e257f02bf53041",
  "manifest.2962a6b0d339e9338b92.js.map": "d87d7f424a6e958b4db99073208e9b46",
  "vendors.f70bd1abd9b21b472611.css": "a184b7f85fa905337909488ff5eee01b",
  "vendors.f70bd1abd9b21b472611.js": "11f392ba1e62a282829454fc434ad722",
  "vendors.f70bd1abd9b21b472611.js.map": "c5f13d7224650187039fdcd64e8def03",
}
`;
